// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform arrowFunction 1`] = `
"const arrowFunction = a => {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a <= 0) return a;
    [a] = [a - 1];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
};"
`;

exports[`transform base 1`] = `
"function base(a) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a <= 0) {
      return a;
    }
    [a] = [a - 1];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
}"
`;

exports[`transform defaultArgActive 1`] = `
"function defaultArgActive(a, b = 0) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a < b) return a;
    [a, b] = [a - 1, 0];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
}"
`;

exports[`transform defaultArgInactive 1`] = `
"function defaultArgInactive(a, b = 0) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a < b) return a;
    [a, b] = [a - 1, b + 1];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
}"
`;

exports[`transform multipleArgs 1`] = `
"function multipleArgs(a, b) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a < b) return a;
    [a, b] = [a - 1, b + 1];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
}"
`;

exports[`transform multipleReturns 1`] = `
"function multipleReturns(a, b, c) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a < 0) return a;
    if (b < 0) {
      const n = b + c;
      [a, b, c] = [n, b, c + 1];
      _continueRecursion = true;
      continue _tailCallLoop;
    }
    [a, b, c] = [a + 1, b + 1, c];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
}"
`;

exports[`transform nestedStatements 1`] = `
"function nestedStatements(a, b) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a > b) {
      if (a > 0) {
        [a, b] = [a - 1, b];
        _continueRecursion = true;
        continue _tailCallLoop;
      }
      return a - b;
    }
    return a + b;
  }
}"
`;

exports[`transform noReturn 1`] = `
"function noReturn(a, b) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a < 10) {
      [a, b] = [a + b, b];
      _continueRecursion = true;
      continue _tailCallLoop;
    } else if (a % 2 === 0) {
      return a;
    }
  }
}"
`;

exports[`transform undefinedArg 1`] = `
"function undefinedArg(a, b) {
  let _continueRecursion = true;
  _tailCallLoop: while (_continueRecursion) {
    _continueRecursion = false;
    if (a < b) return a;
    [a, b] = [a - 1, undefined];
    _continueRecursion = true;
    continue _tailCallLoop;
  }
}"
`;
